[package]
name = "benchy"
version = "0.1.0"
publish = false
authors = [
  "Holaplex <engineering@holaplex.com>",
]
edition = "2021"
description = "CLI tool to benchmark Hub mint API"
readme = "./README.md"
repository = "https://github.com/holaplex/benchy"
license = "AGPL-3.0-or-later"
keywords = ["hub", "holaplex", "web3", "cli", "benchmark", "mint", "compressed"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[dependencies]
graphql_client = { version = "0.13.0", features = ["reqwest"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.0", features = ["v4", "serde"] }
serde = { version="1.0.183", features=["derive"]}
structopt = "0.3.26"
env_logger = "0.10.0"
log = "0.4.20"
serde_json = "1.0.104"
anyhow = "1.0.75"
csv = "1.2.2"
futures = "0.3.28"
indicatif = "0.17.7"
indicatif-log-bridge = "0.2.2"
once_cell = "1.18.0"
url = { version = "2.4.1", features = ["serde"] }
